--- a/public/styles/footer/footer.css
+++ b/public/styles/footer/footer.css
@@ -14,6 +14,7 @@
     align-items: center;
     /* border: 1px solid #000; */
 }
+/* ! -------------------------------- Footer container and wrapper -------------------------------- ! */
 .user-onlinestate {
     width: 10px;
     height: 10px;
@@ -30,3 +31,4 @@
     align-items: center;
     gap: 5px;
 }
+/* ! -------------------------------- Footer components -------------------------------- ! */
