--- a/public/styles/header/header.css
+++ b/public/styles/header/header.css
@@ -13,6 +13,8 @@
     align-items: center;
     border: 1px solid #000;
 }
+/* ! -------------------------------- Header container -------------------------------- ! */
 .userprofile {
     display: flex;
 }
+/* ! -------------------------------- Header componenets -------------------------------- ! */
