--- a/public/styles/main/main.css
+++ b/public/styles/main/main.css
@@ -13,6 +13,7 @@
     align-items: center;
     /* border: 1px solid #000; */
 }
+/* ! -------------------------------- Main container -------------------------------- ! */
 .contact-section {
     width: 30%;
     height: 100%;
@@ -23,3 +24,4 @@
     height: 100%;
     border: 1px solid #3d0;
 }
+/* ! -------------------------------- Main componenets -------------------------------- ! */
