--- a/public/styles/header/header.css
+++ b/public/styles/header/header.css
@@ -9,12 +9,21 @@
     width: 75%;
     max-width: 75vw;
     display: flex;
-    /* justify-content: space-around; */
+    justify-content: space-around;
     align-items: center;
-    border: 1px solid #000;
 }
 /* ! -------------------------------- Header container -------------------------------- ! */
 .userprofile {
     display: flex;
+}
+.user-onlinestate {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+}
+.userprofile-picture {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
 }
 /* ! -------------------------------- Header componenets -------------------------------- ! */
