--- a/public/styles/main/contact-section/contact.css
+++ b/public/styles/main/contact-section/contact.css
@@ -1,28 +1,54 @@
 .contact-section {
     width: 25%;
     height: 100%;
-    border: 1px solid #000;
+    background-color: #222222;
 }
 .contact-container {
-    height: 96%;
+    height: 94%;
     overflow-y: auto;
 }
 .contact-section-search {
+    display: flex;
+    align-items: center;
     width: 100%;
-    height: 4%;
+    height: 6%;
     padding: 5px;
-    border: 1px solid #000;
+    border-bottom: 2px solid #a5a5a5;
+}
+.contact-searchform {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 .contact-search-input {
     width: 100%;
+    height: 30px;
+    padding: 3px;
+    border-radius: 3px;
+    color: #a5a5a5;
+    background-color: #444444;
+    outline: none;
+    border: none;
 }
 .contact-infocontainer {
     display: flex;
     align-items: center;
-    border: 1px solid #000;
+    padding: 5px;
+    border-bottom: 1px solid #444444;
+    user-select: none;
 }
 .contact-profilepicture {
-    width: 70px;
-    height: 70px;
+    margin-right: 5px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
+}
+.contact-username {
+    font-size: 1.1rem;
+    color: aliceblue;
+}
+.contact-infocontainer:hover {
+    cursor: pointer;
+    background-color: #303030;
 }
