--- a/public/styles/main/main.css
+++ b/public/styles/main/main.css
@@ -6,7 +6,8 @@
     justify-content: center;
     width: 100%;
     height: 94vh;
-    background-color: #f0f;
+    background-color: rgb(31, 31, 31);
+    scrollbar-width: 0;
 }
 .main-wrapper {
     width: 75%;
