--- a/src/styles/main/contact-section/contact.css
+++ b/src/styles/main/contact-section/contact.css
@@ -1,19 +1,29 @@
 .contact-section {
+    display: flex;
+    flex-direction: column;
     width: 25%;
     height: 100%;
     background-color: #222222;
 }
 .contact-container {
-    height: 94%;
+    height: 90%;
     overflow-y: auto;
 }
-.contact-section-search {
+.contact-section-header {
     display: flex;
+    flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 6%;
+    height: 10%;
     padding: 5px;
     border-bottom: 2px solid #a5a5a5;
+}
+.contact-section-userinfo {
+    display: flex;
+}
+.contact-search-newcontact {
+    display: flex;
+    flex-direction: row;
 }
 .contact-searchform {
     display: flex;
