--- a/src/styles/main/contact-section/contact.css
+++ b/src/styles/main/contact-section/contact.css
@@ -1,64 +1,22 @@
 .contact-section {
     display: flex;
     flex-direction: column;
-    width: 25%;
-    height: 100%;
-    background-color: #222222;
-}
-.contact-container {
-    height: 90%;
-    overflow-y: auto;
+    width: 40%;
 }
 .contact-section-header {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 100%;
-    height: 10%;
-    padding: 5px;
-    border-bottom: 2px solid #a5a5a5;
 }
+
 .contact-section-userinfo {
     display: flex;
+
+    border: 1px solid #fff;
 }
-.contact-search-newcontact {
-    display: flex;
-    flex-direction: row;
-}
-.contact-searchform {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-.contact-search-input {
-    width: 100%;
-    height: 30px;
-    padding: 3px;
-    border-radius: 3px;
-    color: #a5a5a5;
-    background-color: #444444;
-    outline: none;
-    border: none;
-}
-.contact-infocontainer {
-    display: flex;
-    align-items: center;
-    padding: 5px;
-    border-bottom: 1px solid #444444;
-    user-select: none;
-}
-.contact-profilepicture {
-    margin-right: 5px;
+.contact-header-userprofilepicture {
     width: 50px;
     height: 50px;
     border-radius: 50%;
 }
-.contact-username {
-    font-size: 1.1rem;
-    color: aliceblue;
-}
-.contact-infocontainer:hover {
-    cursor: pointer;
-    background-color: #303030;
+.contact-header-username-display {
 }
