--- a/src/styles/main/contact-section/contact.css
+++ b/src/styles/main/contact-section/contact.css
@@ -7,16 +7,9 @@
     display: flex;
     flex-direction: column;
 }
-
 .contact-section-userinfo {
     display: flex;
-
+    align-items: center;
+    padding: 10px;
     border: 1px solid #fff;
-}
-.contact-header-userprofilepicture {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
-.contact-header-username-display {
 }
