--- a/src/styles/chat.css
+++ b/src/styles/chat.css
@@ -1,3 +1,4 @@
+/* ! -------------------------------- Chat container and wrapper -------------------------------- ! */
 .chat-section {
     width: 100%;
     height: 100%;
@@ -19,6 +20,32 @@
 .chat-massages-wrapper {
     border: 1px solid #000;
     width: 90%;
+}
+/* ! -------------------------------- Chat Header -------------------------------- ! */
+.chat-section-header {
+    display: flex;
+    padding: 5px 0;
+    width: 100%;
+    height: 10%;
+    border: 1px solid rgb(0, 20, 196);
+}
+.chatsec-contact-info {
+    display: flex;
+    align-items: center;
+    width: 50%;
+    border: 1px solid #000;
+}
+.chatheader-contactprofile {
+    margin-right: 7px;
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+}
+.chatheader-options {
+    display: flex;
+    margin-left: auto;
+    width: 50%;
+    border: 1px solid rgb(40, 139, 20);
 }
 /* ! -------------------------------- Chat input -------------------------------- ! */
 .chat-massage-input-container {
